# ghcr-test

./: .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: docker-image.yml
src/my_example_workflow/: __about__.py  __init__.py  __main__.py  snk.yaml
src/my_example_workflow/cli/: __init__.py
src/my_example_workflow/workflow/: Snakefile
tests/: __init__.py
